# ttk-test

./: .gitignore
.github/workflows/: docker.yml  ssh.yml  test.yml
CMake/: config.cmake
core/base/: TTKBaseConfig.cmake.in
core/base/abstractTriangulation/: AbstractTriangulation.h
core/base/approximateTopology/: ApproximateTopology.h
core/base/barycentricSubdivision/: BarycentricSubdivision.cpp  BarycentricSubdivision.h
core/base/clusteringMetrics/: CMakeLists.txt  ClusteringMetrics.cpp  ClusteringMetrics.h  test-clustering.txt
core/base/compactTriangulation/: CompactTriangulation.cpp  CompactTriangulation.h
core/base/dimensionReduction/: CMakeLists.txt  DimensionReduction.cpp  DimensionReduction.h  dimensionReduction.py
core/base/discreteMorseSandwich/: DiscreteMorseSandwich.h
core/base/distanceMatrixDistorsion/: CMakeLists.txt  DistanceMatrixDistorsion.cpp  DistanceMatrixDistorsion.h  test-sim.txt
core/base/distanceMatrixDistortion/: DistanceMatrixDistortion.cpp  DistanceMatrixDistortion.h
core/base/explicitTriangulation/: ExplicitTriangulation.cpp  ExplicitTriangulation.h
core/base/geometry/: Geometry.h
core/base/implicitTriangulation/: ImplicitPreconditions.cpp  ImplicitPreconditions.h  ImplicitTriangulation.cpp  ImplicitTriangulation.h
core/base/lDistanceMatrix/: LDistanceMatrix.h
core/base/legacyTopologicalSimplification/: LegacyTopologicalSimplification.h
core/base/localizedTopologicalSimplification/: LocalizedTopologicalSimplification.h
core/base/mapper/: CMakeLists.txt  Mapper.cpp  Mapper.h
core/base/morseSmaleQuadrangulation/: MorseSmaleQuadrangulation.h
core/base/multiresTopology/: MultiresTopology.cpp  (+1 more)
core/base/topoMap/: CMakeLists.txt  TopoMap.cpp  TopoMap.h
core/base/topologicalMapper/: CMakeLists.txt  TopologicalMapper.cpp  TopologicalMapper.h
doc/: MAPPER_state.md  TEMPLATING_state.md
examples/c++/: main.cpp
examples/vtk-c++/: main.cpp
paraview/xmls/: ClusteringMetrics.xml  DimensionReduction.xml  DistanceMatrixDistorsion.xml  Mapper.xml  TemplatingTest.xml  TestFork.xml  TopoMap.xml  TopoMapHarishd.xml  TopologicalMapper.xml
scripts/docker/: Dockerfile  Dockerfile-buildbase  Dockerfile-builder
standalone/TemplatingTest/: CMakeLists.txt  main.cpp
test-c++/: CMakeLists.txt  main.cpp
test-vtk-c++/: main.cpp
(+104 files in other folders)
